--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,7 @@
     width: 40%
 }
 
-#mainNav{
-}
+
 
 #mainNav .navbar-nav .nav-item .nav-link{
     color:#009
@@ -42,3 +41,13 @@ h2{
 .carousel-control-next-icon {
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2330f' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;  
 } 
+
+.team-member img {
+    width: 400px;
+}
+
+
+.carousel-indicators li {
+
+    background-color: red;
+}
